--- a/www.cdep.ro/2035a48a601276eaa7f75461e333754f7f29bc35.html
+++ b/www.cdep.ro/2035a48a601276eaa7f75461e333754f7f29bc35.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Mocanu_Adrian.jpg" border=0 width="150" alt="Adrian Mocanu">
+<a href="/parlamentari/l2012/mari/Mocanu_Adrian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Mocanu_Adrian.jpg" border=0 width="150" alt="Adrian Mocanu"></a>
 <br>b.  12 may 1983
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Adrian MOCANU</h1>
 <div class="page-actions">
