--- a/www.cdep.ro/d1773c8788025f3894f22fc717c6d30af0454c84.html
+++ b/www.cdep.ro/d1773c8788025f3894f22fc717c6d30af0454c84.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Mocioaca_Ion.jpg" border=0 width="150" alt="Ion Mocioalcã">
+<a href="/parlamentari/l2012/mari/Mocioaca_Ion.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Mocioaca_Ion.jpg" border=0 width="150" alt="Ion Mocioalcã"></a>
 <br>b.  1 jan. 1958
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ion MOCIOALCÃ</h1>
 <div class="page-actions">
